[gd_scene load_steps=3 format=3 uid="uid://co8xamhvjpa1q"]

[ext_resource type="Script" uid="uid://bvy3hgtm57pko" path="res://scenes/ui/player_info.gd" id="1_enjed"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u1tix"]
bg_color = Color(0.247059, 0.14902, 0.192157, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.909804, 0.270588, 0.215686, 1)

[node name="PlayerInfo" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_enjed")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_u1tix")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 240)
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0.909804, 0.270588, 0.215686, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24
text = "玩家信息"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 0
text = "基础信息"

[node name="BasicLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "名称 无名氏
等级 20
性别 男
年龄 18"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 0
text = "属性"

[node name="AttributeLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "攻击力 999
防御力 991"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer/VBoxContainer3/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer/VBoxContainer3/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 0
text = "离线挂机"

[node name="OutlineLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer2/ScrollContainer/VBoxContainer/VBoxContainer3/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "挂机时长 2坤年
可收取经验  222222"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 8

[node name="CollectExperienceBtn" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "收取经验"

[node name="CloseBtn" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "关闭"
